use trim->empty instead of blank to be compatible with Java 1.8.